Fixed white space issue on home page.

--- a/css/custom.css
+++ b/css/custom.css
@@ -68,7 +68,7 @@ body,html {
   left:50%;
   top:32%;
   display:block; 
-  max-width:90%;
+  width:90%;
   margin-left:-45%;
   max-height:32%;
 }
@@ -80,14 +80,14 @@ body,html {
 .title-text{
   position:absolute;
   top:49%;
-  width:514px;
+  width:100%;
   left:50%;
-  margin-left:-257px;
+  margin-left:-50%;
 }
 
 .title-text>p{
   color:#FFFFFF;
-  font-size:20px;
+  font-size:17px;
 }
 
 .yellow-border {
@@ -562,6 +562,9 @@ ul {
 
   .title-text{
     top:47%;
+    width:514px;
+    left:50%;
+    margin-left:-257px;
   }
 
   .title-text>p{
